# workshop_graph_rag

./: README.md  README_entry_point.md  pyproject.toml
data/graph_solutions/: expanded_graph_rag.html  knowledge_graph.html  knowledge_graph.json
exercises/part_01/: 01_entry_point.py  02_document_tools.py
exercises/part_02/: 01_offline_data_preprocessing.py  02_online_semantic_retrieval.py
exercises/part_03/: 01_graph_construction.py  02_graph_rag.py
exercises/part_04/: 01_simple_tool_call.py  02_graph_rag_tool.py  03_more_tools.py
solutions/part_01/: 01_entry_point.py  02_document_tools.py
solutions/part_02/: 01_offline_data_preprocessing.py  02_online_semantic_retrieval.py
solutions/part_03/: 01_graph_construction.py  02_graph_rag.py
solutions/part_04/: 01_simple_tool_call.py  02_graph_rag_tool.py  03_more_tools.py
src/graph_rag_workshop/: __init__.py  settings.py
src/graph_rag_workshop/utils/: part_01_document_tools.py  part_02_rag_utils.py  part_03_graph_construction_utils.py
